made it a https:// link instead of file

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>rth0523</title>
-  <link rel="icon" href="pfp.png" type="image/x-icon">
+  <link rel="icon" href="https://qatual.com/pfp.png" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css2?family=Parkinsans&display=swap" rel="stylesheet">
   <style>
 * {
@@ -141,7 +141,7 @@ hr {
 
   <div class="content" id="mainContent">
     <div class="profile-pic-container">
-      <img src="pfp.png" alt="AAAAA endis">
+      <img src="https://qatual.com/pfp.png" alt="little logi boiiii">
     </div>
     <h1>hi, i'm roman.</h1>
 <hr>
@@ -164,8 +164,7 @@ hr {
   </div>
 
   <div id="overlay">click to enter</div>
-
-  <audio id="bg-audio" src="/music/voices.wav" loop></audio>
+  <audio id="bg-audio" src="https://qatual.com/music/voices.wav" loop></audio>
 
   <script>
     const overlay = document.getElementById('overlay');
